1. Signup (business/personal) 2. SignIn 3. Profile Update Location 4. Forgot Password 5. Post comment List 6. Post Comment 7, Post Like 8. Post Show 9. Post Update 10. Trending List 11. Post Near You

--- a/.env.development.copy
+++ b/.env.development.copy
@@ -13,3 +13,5 @@ HOOLEY_GCM_HOST_LOCAL=https://android.googleapis.com/gcm/send
 
 HOOLEY_APNS_HOST_LOCAL=gateway.push.apple.com
 HOOLEY_APNS_PORT_LOCAL=2195
+
+HOOLEY_DOMAIN_LOCAL=localhost:3000
