--- a/.env.staging.copy
+++ b/.env.staging.copy
@@ -13,3 +13,5 @@ HOOLEY_GCM_HOST_LOCAL=https://android.googleapis.com/gcm/send
 
 HOOLEY_APNS_HOST_LOCAL=gateway.push.apple.com
 HOOLEY_APNS_PORT_LOCAL=2195
+
+HOOLEY_DOMAIN_LOCAL=localhost:3000
